# handwrytten-python-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.py  pyproject.toml  swagger.json
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
examples/: example.py
handwrytten/: __init__.py  client.py  exceptions.py  http_client.py  models.py  resources.py
handwrytten/cli/: __init__.py  address_parser.py  config.py  output.py
handwrytten/cli/commands/: __init__.py  account.py  address.py  cards.py  fonts.py  gift_cards.py  inserts.py  orders.py  send.py
tests/: conftest.py  test_address_parser.py  test_cli.py  test_http_client.py  test_models.py  test_resources.py
